<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdoptAnimalUpload">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:background="#00ff0000"
            android:contentDescription="@string/BACK"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="630dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/wround_square"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="15dp"
            android:text="@string/UploadAdopt"
            android:textColor="#7ED687"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="330dp"
            android:layout_height="500dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="65dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="310dp"
                    android:layout_height="wrap_content"
                    android:text="@string/AnimalInfo"
                    android:textColor="#7ED687"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <TextView
                    android:id="@+id/ess1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Necessary"
                    android:textColor="#f05650"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Image"
                    android:textColor="#6F6F6F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/ani_img"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/UploadImage"
                    app:srcCompat="@android:drawable/ic_menu_upload" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/species"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="0dp"
                        android:hint="@string/Species" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gender"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="0dp"
                        android:hint="@string/Sex" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:hint="@string/Age" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="12dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="0dp"
                        android:hint="@string/Weight" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/neutering"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:hint="@string/Neutering"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <Space
                    android:layout_width="310dp"
                    android:layout_height="12dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="48dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vaccination"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:hint="@string/Vaccination"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/disease"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:hint="@string/Disease"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/deadline"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:hint="@string/Deadline"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/findSpot"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:hint="@string/FindSpot"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/animalInfo"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:hint="@string/ExtraInfo"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:layout_width="310dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/condition"
                        android:layout_width="310dp"
                        android:layout_height="48dp"
                        android:hint="@string/Requirement" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="310dp"
                    android:layout_height="19dp" />

                <TextView
                    android:id="@+id/ess_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Notice1"
                    android:textColor="#f05650"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="640dp"
        android:background="#00ffffff"
        android:elevation="10dp">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/gradient_round_squre"
            android:text="@string/Upload"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </FrameLayout>


</RelativeLayout>